fix: add wrap to value cards

--- a/jobsearch/src/Components/Sections/Value/Value.css
+++ b/jobsearch/src/Components/Sections/Value/Value.css
@@ -99,6 +99,10 @@
 
 @media screen and (max-width: 767px){
 
+    .value_wrapper{
+        flex-wrap: wrap;
+    }
+
     .cta_content{
         padding: 1rem !important;
         margin-inline: 1rem !important;
